--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html  lang="en">
     <head>
-        <title>Proyecto Simulacro</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <title>Ture</title>
     </head>
     <body>
-        <div id="app">
-
-        </div>
+        <div id="app"></div>
     </body>
 </html>
